# aider-script

./: .aider.conf.yml  .gitignore  CLAUDE.md  Cargo.toml  README.md  conventions.md  lint
.github/workflows/: ci.yml
src/: aider_command.rs  args.rs  command_template.rs  document.rs  filters.rs  main.rs  markdown_doc.rs  str.rs
src/fixtures/: 01_args.md  02_casing_filters.md
