[package]
name = "aider-script"
version = "0.1.0"
description = "A CLI wrapper around aider to make calling reusable prompts convenient"
edition = "2024"
license = "MIT"


[dependencies]
anyhow = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
convert_case = "0.8.0"
tera = "1.20.0"
yaml-rust2 = "0.10"
