[package]
name = "aider-script"
version = "0.1.3"
edition = "2024"
description = "A CLI wrapper around aider to make calling reusable prompts convenient"
keywords = ["llm", "aider", "ai"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
authors = ["Sam Rowe"]
homepage = "https://github.com/sgrowe/aider-script#readme"
repository = "https://github.com/sgrowe/aider-script"

exclude = [".aider.conf.yml", "CLAUDE.md", "conventions.md", "lint"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
convert_case = "0.8.0"
tera = "1.20.0"
yaml-rust2 = "0.10"
